# challenges

106/: vowels.py
109/: pyproject.toml  workouts.py
270/: freq.py
3/: wordvalue.py
5/: names.py
54/: poem.py
55/: steam.py
56/: bmi.py
9/: palindrome.py
