[tool.poetry]
name = "109"
version = "0.1.0"
description = ""
authors = ["VGaftoniuc <VGaftoniuc@me.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
